# background_utils

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  pyproject.toml  test.py
.claude/: settings.local.json
.kilocode/rules/: .memrules.md  general.md  mem_bank_rules.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: run_service.ps1  run_service.sh  tail_log.ps1  tail_log.sh
src/background_utils/: config.py  logging.py
src/background_utils/cli/: __init__.py  __main__.py  app.py
src/background_utils/cli/commands/: example.py  wifi.py
src/background_utils/services/: battery_monitor.py  example_service.py  gmail_notifier.py  manager.py  my_service.py
tests/: test_example.py  test_suite.py
